# Engineering-Data-Management

./: Data_loader.py  Makoveev.py  README.md  data_loader_notebook.ipynb  environment.yml  pyproject.toml  write_to_db.py
API_Reader/: API_reader.py  README.md  api_reader_notebook.ipynb  environment.yml  pyproject.toml
EDA notebook/: EDA.ipynb  Readme.md
ETL/: extract.py  main.py  process.py  save.py  validation.py
